# explainable-book-recs

./: .dockerignore  .gitignore  README.md  docker-compose.yml  start-dev.sh  stop-dev.sh
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: db.py  main.py  migrate.py
backend/app/api/: books.py  recommend.py  semantic.py  similar.py
backend/app/jobs/: embeddings_job.py
backend/app/migrations/: 001_baseline.sql  002_pgvector_embeddings.sql  003_books_lang_fiction_ts.sql  20250928_add_pgvector_embeddings.sql
backend/app/models/: __init__.py  book.py  embedding.py  rating.py
backend/app/services/: cf.py  embeddings.py  explain.py  recs.py
backend/etl/: enrich_books.py  enrich_googlebooks.py  enrich_openlibrary.py  enrich_wikipedia.py  goodreads_ingest.py  openlibrary_ingest.py
docker/: Dockerfile.api  Dockerfile.web
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/components/: BookList.tsx  PageShell.tsx  Topbar.tsx
frontend/src/app/components/ui/: Button.tsx
frontend/src/app/recs/: RecsClient.tsx  page.tsx
frontend/src/app/search/: SearchClient.tsx  page.tsx
frontend/src/app/similar/: SimilarClient.tsx  page.tsx
frontend/src/lib/: api.ts
